envoy-gen.yaml
admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ['*']
                      routes:
                        - match:
                            prefix: '/'
                          route:
                            cluster: dgraph
                http_filters:
                  - name: envoy.filters.http.jwt_authn
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
                      providers:
                        auth0:
                          issuer: https://dev-p6wel6rm.us.auth0.com/
                          remote_jwks:
                            http_uri:
                              uri: https://dev-p6wel6rm.us.auth0.com/.well-known/jwks.json
                              cluster: auth_tls
                              timeout:
                                seconds: 5
                          from_headers:
                            - name: 'X-Auth-Token'
                          forward: true
                          forward_payload_header: 'X-Dgraph-AccessToken'
                      rules:
                        - match:
                            prefix: /
                            headers:
                              - name: :method
                                contains_match: OPTIONS
                                invert_match: true
                          requires:
                            provider_name: auth0
                  - name: envoy.filters.http.router

  clusters:
    - name: dgraph
      type: logical_dns
      connect_timeout: 30s
      load_assignment:
        cluster_name: service_dgraph
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: alpha
                      port_value: 8080

    - name: auth_tls
      connect_timeout: 30s
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      load_assignment:
        cluster_name: auth_tls
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: dev-p6wel6rm.us.auth0.com
                      port_value: 443
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          sni: dev-p6wel6rm.us.auth0.com
