envoy.yaml
admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                http_filters:
                  - name: envoy.filters.http.router
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ['*']
                      routes:
                        - match:
                            prefix: '/graphql'
                          route:
                            cluster: dgraph
                http_filters:
                  - name: envoy.router
  clusters:
    - name: dgraph
      type: LOGICAL_DNS
      connect_timeout: 30s
      load_assignment:
        cluster_name: service_dgraph
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: alpha
                      port_value: 8080
